@@ -115,14 +115,12 @@ static void USB_Device_SetAddress(void)
 {
 	uint8_t wValue_LSB = Endpoint_Read_Byte();
 
-	UDADDR = ((UDADDR & (1 << ADDEN)) | (wValue_LSB & 0x7F));
-
 	Endpoint_ClearSetupReceived();
 
 	Endpoint_ClearSetupIN();
 	while (!(Endpoint_IsSetupINReady()));
 	
-	UDADDR |= (1 << ADDEN);
+	UDADDR = ((1 << ADDEN) | (wValue_LSB & 0x7F));
 
 	return;
 }
