@@ -29,6 +29,7 @@
   *  - Simplified internal Dual Mode (OTG) USB library code to reduce code size
   *  - Extended stream timeout period to 100ms from 50ms
   *  - Mass Storage Host demo commands now all return an error code from the Pipe_Stream_RW_ErrorCodes_t enum
+  *  - Added SubErrorCode parameter to the USB_DeviceEnumerationFailed event
   *
   *  \section Sec_ChangeLog241208 Version 241208
   *
